@@ -24,7 +24,7 @@ int rl_character_len (int c, int pos)
 void
 testTortureExecute (void)
 {
-#if !defined (__SDCC_hc08) && !defined (__SDCC_ds390) && !defined (__SDCC_mcs51)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08) && !defined (__SDCC_ds390) && !defined (__SDCC_mcs51)
   int (*x)(int, int) = rl_character_len;
   if (x('a', 1) != 1)
     ASSERT (0);
